# vinnie

./: .gitignore  .travis.yml  Doxyfile  LICENSE-3RD-PARTY  Makefile.am  README.md  appveyor.yml  config.h.in  configure.ac  meson.build  meson_options.txt  vinnie.c
include/: vin.h  vinnie.h
lib/: Makefile.am  meson.build
scripts/: doxy.sh
src/: Makefile.am  meson.build  vin.c  vinnie.c  vinnie.h
test/: check_vinnie.c  meson.build
tests/: Makefile.am
